# qvoting

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: example_01_basic_voter.py
src/qvoting/: __init__.py  nisq_selector.py
src/qvoting/core/: __init__.py  circuits.py  execution.py  logging.py
src/qvoting/holographic/: __init__.py  encoder.py  erasure.py  rt_formula.py  tomography.py
src/qvoting/mitigation/: __init__.py  qmvem.py  readout.py  zne.py
src/qvoting/nll/: __init__.py  circuit.py  node.py  trainer.py
src/qvoting/voters/: __init__.py  hierarchical.py  majority.py
tests/: conftest.py  test_circuits.py  test_mitigation.py  test_nisq_selector.py  test_nll.py  test_voters.py
